<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CLOnProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Profile">


    <TextView
        android:id="@+id/TitleHeaderOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/UserNameOnProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TitleUNOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/user_name"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/TitlePasswordOnProfile"
        app:layout_constraintEnd_toStartOf="@+id/UserNameOnProfile"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/UserNameOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/for_empty_fields"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/PasswordOnProfile"
        app:layout_constraintEnd_toEndOf="@+id/PasswordOnProfile"
        app:layout_constraintStart_toStartOf="@+id/PasswordOnProfile" />

    <TextView
        android:id="@+id/TitlePasswordOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/TitleGenderOnProfile"
        app:layout_constraintEnd_toStartOf="@+id/PasswordOnProfile"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/PasswordOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/for_empty_fields"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/GenderOnProfile"
        app:layout_constraintEnd_toEndOf="@+id/GenderOnProfile"
        app:layout_constraintStart_toStartOf="@+id/GenderOnProfile" />

    <TextView
        android:id="@+id/TitleGenderOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/gender"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/GenderOnProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/GenderOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/for_empty_fields"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TitleBirthdayOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/date_of_birth"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/BirthdayOnProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleGenderOnProfile" />

    <TextView
        android:id="@+id/BirthdayOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/for_empty_fields"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/GenderOnProfile"
        app:layout_constraintStart_toStartOf="@+id/GenderOnProfile"
        app:layout_constraintTop_toBottomOf="@+id/GenderOnProfile" />

    <TextView
        android:id="@+id/TitleEmailOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/email"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/EmailOnProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleBirthdayOnProfile" />

    <TextView
        android:id="@+id/EmailOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/for_empty_fields"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/BirthdayOnProfile"
        app:layout_constraintStart_toStartOf="@+id/BirthdayOnProfile"
        app:layout_constraintTop_toBottomOf="@+id/BirthdayOnProfile" />

    <Button
        android:id="@+id/BLogInOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="@string/authorization"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/BSignUpOnProfile"
        app:layout_constraintStart_toStartOf="@+id/BSignUpOnProfile"
        app:layout_constraintTop_toBottomOf="@+id/BSignUpOnProfile" />

    <Button
        android:id="@+id/BSignUpOnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailOnProfile" />
</androidx.constraintlayout.widget.ConstraintLayout>